# Test data for builder acceptance tests.
licenses(["notice"])

package(default_visibility = ["//builders:__subpackages__"])

exports_files(
    [
        "dart",
        "dotnet",
        "generic",
        "go",
        "java",
        "nodejs",
        "php",
        "python",
        "ruby",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]) + [
        "//builders/testdata/{}:all_files".format(subpkg)
        for subpkg in subpackages(include = ["**"])
    ],
)
