# .NET Meta Buildpack
load("//tools:defs.bzl", "meta_buildpack")

licenses(["notice"])

meta_buildpack(
    name = "dotnet",
    buildpacks = [
        "//cmd/config/entrypoint:entrypoint.tgz",
        "//cmd/dotnet/appengine:appengine.tgz",
        "//cmd/dotnet/appengine_main:appengine_main.tgz",
        "//cmd/dotnet/functions_framework:functions_framework.tgz",
        "//cmd/dotnet/publish:publish.tgz",
        "//cmd/dotnet/runtime:runtime.tgz",
        "//cmd/dotnet/sdk:sdk.tgz",
        "//cmd/utils/archive_source:archive_source.tgz",
        "//cmd/utils/label:label.tgz",
    ],
    visibility = [
        "//builders:dotnet_builders",
    ],
)
