load("@io_bazel_rules_go//go:def.bzl", "go_library")

licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

go_library(
    name = "buildpacktest",
    testonly = 1,
    srcs = ["buildpacktest.go"],
    data = [
        "//internal/buildpacktest/mockprocess",
    ],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
    deps = [
        "//internal/buildpacktestenv",
        "//pkg/env",
        "//pkg/fileutil",
        "//pkg/gcpbuildpack",
    ],
)
