load("@io_bazel_rules_go//go:def.bzl", "go_library")

licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

go_library(
    name = "buildpacktestenv",
    testonly = 1,
    srcs = ["buildpacktestenv.go"],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
)
