load("@io_bazel_rules_go//go:def.bzl", "go_library")

licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

go_library(
    name = "checktools",
    srcs = ["checktools.go"],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
    deps = ["@com_github_masterminds_semver//:go_default_library"],
)
