load("@io_bazel_rules_go//go:def.bzl", "go_library")

licenses(["notice"])

package(default_visibility = [])

go_library(
    name = "testserver",
    srcs = [
        "testserver.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
    visibility = [
        "//:__subpackages__",
    ],
)
