load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

licenses(["notice"])

go_library(
    name = "acceptance",
    srcs = [
        "acceptance.go",
        "structure.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
    visibility = [
        "//builders:__subpackages__",
    ],
    deps = ["@com_github_burntsushi_toml//:go_default_library"],
)

go_test(
    name = "acceptance_test",
    size = "small",
    srcs = ["structure_test.go"],
    embed = [":acceptance"],
    rundir = ".",
)
