load("@io_bazel_rules_go//go:def.bzl", "go_library")

licenses(["notice"])

go_library(
    name = "appstart",
    srcs = ["appstart.go"],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
    visibility = [
        "//cmd/dotnet:__subpackages__",
        "//cmd/go:__subpackages__",
        "//cmd/java:__subpackages__",
        "//cmd/php:__subpackages__",
        "//cmd/python:__subpackages__",
        "//cmd/ruby:__subpackages__",
        "//pkg:__subpackages__",
    ],
    deps = ["//pkg/gcpbuildpack"],
)
