load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

go_library(
    name = "ar",
    srcs = ["ar.go"],
    importpath = "github.com/GoogleCloudPlatform/buildpacks/" + package_name(),
    deps = [
        "//pkg/buildermetrics",
        "//pkg/gcpbuildpack",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

go_test(
    name = "ar_test",
    size = "small",
    srcs = ["ar_test.go"],
    embed = [":ar"],
    rundir = ".",
    deps = [
        "//pkg/buildermetrics",
        "//pkg/gcpbuildpack",
        "@com_github_google_go-cmp//cmp:go_default_library",
    ],
)
